--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
     <script src="components/brush.js"></script>
     <script src="components/colorwheel.js"></script>
   </head>
-  <body style="background-color: #000">
+  <body style="background-color: #030404">
     <a-scene debug="true">
       <a-assets>
         <img id="floor" src="images/floor.jpg">
+        <img id="skymap" src="images/sky.jpg">
         <img id="color" src="images/colorwheel.png">
       </a-assets>
       <a-entity id="point" light="color: #f4f4f4; intensity: 0.6; type: point"></a-entity>
@@ -34,10 +35,11 @@
                 </a-entity>
       </a-entity>
       <a-entity id="ground"
-                geometry="primitive: circle; radius: 8;"
+                geometry="primitive: circle; radius: 12;"
                 rotation="-90 0 0"
                 material="shader: flat; src: #floor">
       </a-entity>
+      <a-entity position="0 0 0" id="sky" geometry="primitive:sphere;radius:30;phiLength:360;phiStart:0;thetaLength:90" material="shader:flat;side:back;height:2048;src:#skymap;width:2048"></a-entity>
     </a-scene>
   </body>
 </html>
