--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>A-Painter</title>
     <meta name="description" content="A-Painter">
-    <script src="../../../dist/aframe.js"></script>
+    <script src="node_modules/aframe/dist/aframe.js"></script>
     <script src="components/brush.js"></script>
     <script src="components/colorwheel.js"></script>
   </head>
