--- a/index.html
+++ b/index.html
@@ -14,12 +14,15 @@
         <img id="floor" src="images/floor.jpg">
         <img id="skymap" src="images/sky.jpg">
         <img id="color" src="images/colorwheel.png">
+        <a-asset-item id="controller-mtl" src="models/controller.mtl"></a-asset-item>
+        <a-asset-item id="controller-obj" src="models/controller.obj"></a-asset-item>
       </a-assets>
       <a-entity id="point" light="color: #f4f4f4; intensity: 0.6; type: point"></a-entity>
       <a-entity id="hemisphere" light="color: #47c9ff; intensity: 0.8; type: hemisphere"></a-entity>
       <a-entity id="left-hand"
                 brush="color: #ff0; linewidth: 1"
-                vive-controls="hand: left">
+                vive-controls="hand: left; model: false"
+                obj-model="obj: #controller-obj; mtl: #controller-mtl">
                 <!--<a-entity geometry="primitive: sphere; radius: 0.035" position="0 -0.03 -0.02" material="color:#ff9; shader:flat"></a-entity>-->
                 <a-entity visible="true" colorwheel geometry="primitive:plane; width: 0.1; height: 0.1" position="0 0.027 0.06" rotation="90 0 0" material="shader: flat; transparent:true; color: #fff; src:#color; side:double">
                   <a-entity marker geometry="primitive: sphere; radius: 0.005" position="0 0 0" material="color: #fff; roughness: 1.0; metalness:0.0">
@@ -28,7 +31,8 @@
       </a-entity>
       <a-entity id="right-hand"
                 brush="color: #ff0; linewidth: 1"
-                vive-controls="hand: right">
+                vive-controls="hand: right"
+                obj-model="obj: #controller-obj; mtl: #controller-mtl">
                 <a-entity visible="true" colorwheel geometry="primitive:plane; width: 0.1; height: 0.1" position="0 0.027 0.06" rotation="90 0 0" material="shader: flat; transparent:true; color: #fff; src:#color; side:double">
                   <a-entity marker geometry="primitive: sphere; radius: 0.005" position="0 0 0" material="color: #fff; roughness: 1.0; metalness:0.0">
                   </a-entity>
