WIP binary file

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>A-Painter</title>
     <meta name="description" content="A-Painter">
     <script src="node_modules/aframe/dist/aframe.js"></script>
+    <script src="components/line.js"></script>
     <script src="components/brush.js"></script>
     <script src="components/colorwheel.js"></script>
   </head>
