--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <title>A-Painter</title>
     <meta name="description" content="A-Painter">
     <script src="node_modules/aframe/dist/aframe.js"></script>
+    <script src="vendor/saveas.js"></script>
+    <script src="components/urlparams.js"></script>
+    <script src="components/lines.js"></script>
     <script src="components/line.js"></script>
+    <script src="components/binarywriter.js"></script>
     <script src="components/brush.js"></script>
     <script src="components/colorwheel.js"></script>
     <script>
