--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       UPLOADCARE_TABS = 'file url facebook gdrive dropbox instagram evernote flickr skydrive';
       UPLOADCARE_PUBLIC_KEY = '55320f006163a205ac13';
     </script>
-    <script src="//ucarecdn.com/widget/2.5.5/uploadcare/uploadcare.full.min.js"></script>
+    <!--<script src="//ucarecdn.com/widget/2.5.5/uploadcare/uploadcare.full.min.js"></script>-->
   </head>
   <body style="background-color: #030404">
     <a-scene debug="true">
