Refactored and added boxes brush

--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
       UPLOADCARE_LOCALE = 'en';
       UPLOADCARE_PUBLIC_KEY = 'eb0df3191b88f403ad76';
     </script>
-    <script src="//ucarecdn.com/widget/2.5.5/uploadcare/uploadcare.full.min.js"></script>
+    <!--<script src="//ucarecdn.com/widget/2.5.5/uploadcare/uploadcare.full.min.js"></script>-->
 
     <script src="components/urlparams.js"></script>
-    <script src="components/line.js"></script>
     <script src="components/binarywriter.js"></script>
     <script src="components/brush.js"></script>
+    <script src="components/brushes/line.js"></script>
+    <script src="components/brushes/boxes.js"></script>
     <script src="components/colorwheel.js"></script>
   </head>
   <body style="background-color: #030404">
