--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <script src="components/brush.js"></script>
     <script src="components/brushes/line.js"></script>
     <script src="components/brushes/boxes.js"></script>
+    <script src="components/brushes/cubes.js"></script>
     <script src="components/colorwheel.js"></script>
   </head>
   <body style="background-color: #030404">
