New file format

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
     <script src="components/urlparams.js"></script>
     <script src="components/binarywriter.js"></script>
+    <script src="components/binaryreader.js"></script>
     <script src="components/brush.js"></script>
     <script src="components/brushes/line.js"></script>
     <script src="components/brushes/spheres.js"></script>
