--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       UPLOADCARE_LOCALE = 'en';
       UPLOADCARE_PUBLIC_KEY = 'eb0df3191b88f403ad76';
     </script>
-    <!--<script src="//ucarecdn.com/widget/2.5.5/uploadcare/uploadcare.full.min.js"></script>-->
+    <script src="//ucarecdn.com/widget/2.5.5/uploadcare/uploadcare.full.min.js"></script>
 
     <script src="components/binarywriter.js"></script>
     <script src="components/binaryreader.js"></script>
