pointerPosition added and optimization

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <script src="src/brushes/cubes.js"></script>
   </head>
   <body style="background-color: #030404">
-    <a-scene debug="true">
+    <a-scene debug="true" antialias="true">
       <a-assets>
         <img id="floor" src="https://cdn.aframe.io/a-painter/images/floor.jpg">
         <img id="skymap" src="https://cdn.aframe.io/a-painter/images/sky.jpg">
