Copy to clipboard url

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <div id="ui">
       <div id="share" class="hide">
         <input id="share-url" type="text" value="" readonly/>
-        <div id="copy-toclipboard" class="button">COPY SHARE URL</div>
+        <div id="copy-toclipboard" data-clipboard-target="#share-url" class="button copy">COPY SHARE URL</div>
       </div>
     </div>
   </body>
