added stamp brush type and new brushes

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <script src="src/components/ui.js"></script>
     <!-- brushes -->
     <script src="src/brushes/line.js"></script>
+    <script src="src/brushes/stamp.js"></script>
     <script src="src/brushes/spheres.js"></script>
     <script src="src/brushes/cubes.js"></script>
     <!-- css -->
