--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <script src="src/brushes/line.js"></script>
     <script src="src/brushes/spheres.js"></script>
     <script src="src/brushes/cubes.js"></script>
+
     <!-- css -->
     <link rel="stylesheet" href="css/main.css">
   </head>
@@ -72,5 +73,7 @@
         </div>
       </div>
     </div>
+    <!-- dragndrop -->
+    <script src="src/dnd.js"></script>
   </body>
 </html>
