added DnD suport of images and OBJs

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
         <a-asset-item id="uiobj" src="https://cdn.aframe.io/a-painter/models/ui.obj"></a-asset-item>
       </a-assets>
       <a-light type="point" light="color: #fff; intensity:0.6" position="3 10 1"></a-light>
+      <a-light type="point" light="color: #fff; intensity:0.2" position="-3 -10 0"></a-light>
       <a-light type="hemisphere" groundColor="#888" intensity="0.8"></a-light>
       <a-entity id="logo" material="flatShading:true; shader:flat; transparent:true; color:#ffffff; fog:false; src:#apainterlogo" obj-model="obj: #logoobj">
         <a-animation begin="fadeout" attribute="material.opacity" fill="none" from="1" to="0" dur="3000"></a-animation>
@@ -74,6 +75,6 @@
       </div>
     </div>
     <!-- dragndrop -->
-    <script src="src/dnd.js"></script>
+    <script src="src/dragndrop.js"></script>
   </body>
 </html>
