--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body style="background-color: #030404">
-    <a-scene antialias="true">
+    <a-scene debug="true" antialias="true">
       <a-assets>
         <img id="floor" src="https://cdn.aframe.io/a-painter/images/floor.jpg">
         <img id="skymap" src="https://cdn.aframe.io/a-painter/images/sky.jpg">
@@ -61,7 +61,6 @@
       </a-entity>
       <a-entity position="0 0 0" id="sky" geometry="primitive:sphere; radius:30; phiLength:360; phiStart:0; thetaLength:90" material="shader:flat; side:back; height:2048; src:#skymap; width:2048"></a-entity>
     </a-scene>
-    http://a-painter.com/?url=
     <div id="apainter-ui">
       <div id="share" class="hide">
         <div id="help">
