Added (n) shortcut to select next brush

--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
         <a-animation begin="fadeout" attribute="material.opacity" fill="none" from="1" to="0" dur="3000"></a-animation>
       </a-entity>
       <a-entity id="left-hand"
-                brush="color: #ff0; linewidth: 1"
+                brush="color: #ff9"
                 paint-controls="hand: left"
                 ui></a-entity>
       <a-entity id="right-hand"
-                brush="color: #ff0; linewidth: 1"
+                brush="color: #ff9"
                 paint-controls="hand: right"
                 ui></a-entity>
       <a-entity id="ground"
