Removed comment from right-hand

--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
                 brush="color: #ff9"
                 paint-controls="hand: left"
                 ui></a-entity>
-      <!-- <a-entity id="right-hand"
+      <a-entity id="right-hand"
                 brush="color: #ff9"
                 paint-controls="hand: right"
-                ui></a-entity>-->
+                ui></a-entity>
       <a-entity id="ground"
                 geometry="primitive: circle; radius: 12;"
                 rotation="-90 0 0"
