Added warning for non-existing brushes, and select default one

--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
   <body style="background-color: #030404">
     <a-scene debug="true" antialias="true" stats>
       <a-assets>
-        <img id="floor" src="https://cdn.aframe.io/a-painter/images/floor.jpg">
-        <img id="skymap" src="https://cdn.aframe.io/a-painter/images/sky.jpg">
-        <img id="uinormal" src="https://cdn.aframe.io/a-painter/images/ui-normal.png">
-        <img id="apainterlogo" src="https://cdn.aframe.io/a-painter/images/logo.png">
+        <img id="floor" src="https://cdn.aframe.io/a-painter/images/floor.jpg" crossOrigin="anonymous">
+        <img id="skymap" src="https://cdn.aframe.io/a-painter/images/sky.jpg" crossOrigin="anonymous">
+        <img id="uinormal" src="https://cdn.aframe.io/a-painter/images/ui-normal.png" crossOrigin="anonymous">
+        <img id="apainterlogo" src="https://cdn.aframe.io/a-painter/images/logo.png" crossOrigin="anonymous">
         <a-asset-item id="logoobj" src="https://cdn.aframe.io/a-painter/models/logo.obj"></a-asset-item>
         <a-asset-item id="uiobj" src="https://cdn.aframe.io/a-painter/models/ui.obj"></a-asset-item>
       </a-assets>
