Rotate the raycaster 45 degrees

--- a/index.html
+++ b/index.html
@@ -22,8 +22,10 @@
     <!-- components -->
     <script src="src/components/brush.js"></script>
     <script src="src/components/json-model.js"></script>
+    <script src="src/components/line.js"></script>
     <script src="src/components/paint-controls.js"></script>
     <script src="src/components/ui.js"></script>
+    <script src="src/components/ui-raycaster.js"></script>
     <!-- brushes -->
     <script src="src/brushes/line.js"></script>
     <script src="src/brushes/stamp.js"></script>
