--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body style="background-color: #030404">
-    <a-scene debug="true" antialias="true" stats>
+    <a-scene>
       <a-assets>
         <img id="floor" src="https://cdn.aframe.io/a-painter/images/floor.jpg" crossOrigin="anonymous">
         <img id="skymap" src="https://cdn.aframe.io/a-painter/images/sky.jpg" crossOrigin="anonymous">
