Added aframe.js from cdn

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>A-Painter</title>
     <meta name="description" content="A-Painter">
     <!-- vendor -->
-    <script src="node_modules/aframe/dist/aframe.js"></script>
+    <script src="https://aframe.io/aframe/dist/aframe.js"></script>
     <script>
       UPLOADCARE_LOCALE = 'en';
       UPLOADCARE_PUBLIC_KEY = 'eb0df3191b88f403ad76';
