--- a/index.html
+++ b/index.html
@@ -85,5 +85,6 @@
     <!-- dragndrop -->
     <script src="src/dragndrop.js"></script>
     <script src="src/main.js"></script>
+    <script src="vendor/ga.js"></script>
   </body>
 </html>
