--- a/index.html
+++ b/index.html
@@ -3,36 +3,14 @@
   <head>
     <meta charset="utf-8">
     <title>A-Painter</title>
-    <meta name="description" content="A-Painter">
-    <!-- vendor -->
-    <script src="https://aframe.io/aframe/dist/aframe.js"></script>
+    <meta name="description" content="Paint in VR in your browser. Powered by A-Frame.">
     <script>
       UPLOADCARE_LOCALE = 'en';
       UPLOADCARE_PUBLIC_KEY = 'eb0df3191b88f403ad76';
     </script>
-    <script src="//ucarecdn.com/widget/2.5.5/uploadcare/uploadcare.full.min.js"></script>
-    <script src="vendor/saveas.js"></script>
+    <script src="https://ucarecdn.com/widget/2.5.5/uploadcare/uploadcare.full.min.js"></script>
     <script src="https://cdn.rawgit.com/zenorocha/clipboard.js/v1.5.12/dist/clipboard.min.js"></script>
-    <!-- app -->
-    <script src="src/binarymanager.js"></script>
-    <script src="src/ui2d.js"></script>
-    <!-- systems -->
-    <script src="src/systems/brush.js"></script>
-    <script src="src/systems/ui.js"></script>
-    <!-- components -->
-    <script src="src/components/brush.js"></script>
-    <script src="src/components/json-model.js"></script>
-    <script src="src/components/line.js"></script>
-    <script src="src/components/paint-controls.js"></script>
-    <script src="src/components/ui.js"></script>
-    <script src="src/components/ui-raycaster.js"></script>
-    <!-- brushes -->
-    <script src="src/brushes/line.js"></script>
-    <script src="src/brushes/stamp.js"></script>
-    <script src="src/brushes/spheres.js"></script>
-    <script src="src/brushes/cubes.js"></script>
-
-    <!-- css -->
+    <script src="build.js"></script>
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body style="background-color: #030404">
