Changed script load order / bundling.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     </script>
     <script src="https://ucarecdn.com/widget/2.5.5/uploadcare/uploadcare.full.min.js"></script>
     <script src="https://cdn.rawgit.com/zenorocha/clipboard.js/v1.5.12/dist/clipboard.min.js"></script>
+    <script src="vendor/aframe.min.js"></script>
     <script src="build.js"></script>
     <link rel="stylesheet" href="css/main.css">
   </head>
@@ -66,7 +67,7 @@
     </div>
     <!-- dragndrop -->
     <script src="src/dragndrop.js"></script>
-    <script src="src/main.js"></script>
+    <script src="build.js"></script>
     <script src="vendor/ga.js"></script>
 
     <!-- GitHub corner. -->
