--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       UPLOADCARE_LOCALE = 'en';
       UPLOADCARE_PUBLIC_KEY = 'eb0df3191b88f403ad76';
     </script>
-    <script src="vendor/aframe.min.js"></script>
+    <script src="https://aframe.io/releases/0.3.1/aframe.min.js"></script>
     <script src="https://ucarecdn.com/widget/2.5.5/uploadcare/uploadcare.full.min.js"></script>
     <script src="https://cdn.rawgit.com/zenorocha/clipboard.js/v1.5.12/dist/clipboard.min.js"></script>
     <script src="build.js"></script>
