--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="https://ucarecdn.com/widget/2.5.5/uploadcare/uploadcare.full.min.js"></script>
     <script src="https://cdn.rawgit.com/zenorocha/clipboard.js/v1.5.12/dist/clipboard.min.js"></script>
     <script src="build.js"></script>
+    <script src="vendor/OrbitControls.js"></script>
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body style="background-color: #030404">
@@ -45,11 +46,9 @@
                 material="shader: flat; src: #floor">
       </a-entity>
       <a-entity id="sky" geometry="primitive:sphere; radius:30; phiLength:360; phiStart:0; thetaLength:90" material="shader:flat; side:back; height:2048; src:#skymap; width:2048"></a-entity>
-
-      <a-entity if-no-vr-headset="position: 0 0 2.5">
-        <a-camera></a-camera>
-      </a-entity>
+      <a-entity id="acamera" camera look-controls-alt orbit-controls></a-entity>
     </a-scene>
+    <a href="https://aframe.io/a-painter/"><div id="apainter-logo" class="hidden"></div></a>
     <div id="apainter-ui">
       <div class="progress hide">
         Saving painting...
