--- a/index.html
+++ b/index.html
@@ -29,20 +29,22 @@
       <a-entity id="logo" obj-model="obj: #logoobj; mtl: #logomtl">
         <a-animation begin="fadeout" attribute="material.opacity" fill="none" from="1" to="0" dur="3000"></a-animation>
       </a-entity>
+      <a-entity id="ground"
+                geometry="primitive: circle; radius: 12;"
+                rotation="-90 0 0"
+                material="shader: flat; src: #floor">
       <a-entity id="left-hand"
                 brush
                 if-no-vr-headset="visible: false"
                 paint-controls="hand: left"
+                teleport="ground: #ground"
                 ui></a-entity>
       <a-entity id="right-hand"
                 brush
                 if-no-vr-headset="visible: false"
                 paint-controls="hand: right"
+                teleport="ground: #ground"
                 ui></a-entity>
-      <a-entity id="ground"
-                geometry="primitive: circle; radius: 12;"
-                rotation="-90 0 0"
-                material="shader: flat; src: #floor">
       </a-entity>
       <a-entity id="sky" geometry="primitive:sphere; radius:30; phiLength:360; phiStart:0; thetaLength:90" material="shader:flat; side:back; height:2048; src:#skymap; width:2048"></a-entity>
       <a-entity id="acamera" camera look-controls-alt orbit-controls></a-entity>
