--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="https://ucarecdn.com/widget/2.5.5/uploadcare/uploadcare.full.min.js"></script>
     <script src="https://cdn.rawgit.com/zenorocha/clipboard.js/v1.5.12/dist/clipboard.min.js"></script>
     <script src="build.js"></script>
+    <script src="http://localhost:9000/examples/showcase/teleport/components/teleport.js"></script>
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body style="background-color: #030404">
@@ -29,9 +30,11 @@
       <a-entity id="logo" obj-model="obj: #logoobj; mtl: #logomtl">
         <a-animation begin="fadeout" attribute="material.opacity" fill="none" from="1" to="0" dur="3000"></a-animation>
       </a-entity>
+      <!--geometry="primitive: circle; radius: 12;"
+      rotation="-90 0 0"-->
+
       <a-entity id="ground"
-                geometry="primitive: circle; radius: 12;"
-                rotation="-90 0 0"
+                geometry="primitive: box; width: 12; height: 0.1; depth: 12"
                 material="shader: flat; src: #floor">
               </a-entity>
       <a-entity id="left-hand"
