--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="https://ucarecdn.com/widget/2.5.5/uploadcare/uploadcare.full.min.js"></script>
     <script src="https://cdn.rawgit.com/zenorocha/clipboard.js/v1.5.12/dist/clipboard.min.js"></script>
     <script src="build.js"></script>
-    <script src="http://localhost:9000/examples/showcase/teleport/components/teleport.js"></script>
+    <script src="https://rawgit.com/fernandojsg/aframe-teleport-component/master/dist/aframe-teleport-component.min.js"></script>
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body style="background-color: #030404">
