Fixed url textures

--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
   <body style="background-color: #030404">
     <a-scene>
       <a-assets>
-        <img id="floor" src="http://localhost:8080/assets/images/floor.jpg" crossOrigin="anonymous">
-        <img id="skymap" src="http://localhost:8080/assets/images/sky.jpg" crossOrigin="anonymous">
-        <img id="uinormal" src="http://localhost:8080/assets/images/ui-normal.png" crossOrigin="anonymous">
-        <a-asset-item id="logoobj" src="http://localhost:8080/assets/models/logo.obj"></a-asset-item>
-        <a-asset-item id="logomtl" src="http://localhost:8080/assets/models/logo.mtl"></a-asset-item>
-        <a-asset-item id="uiobj" src="http://localhost:8080/assets/models/ui.obj"></a-asset-item>
+        <img id="floor" src="assets/images/floor.jpg" crossOrigin="anonymous">
+        <img id="skymap" src="assets/images/sky.jpg" crossOrigin="anonymous">
+        <img id="uinormal" src="assets/images/ui-normal.png" crossOrigin="anonymous">
+        <a-asset-item id="logoobj" src="assets/models/logo.obj"></a-asset-item>
+        <a-asset-item id="logomtl" src="assets/models/logo.mtl"></a-asset-item>
+        <a-asset-item id="uiobj" src="assets/models/ui.obj"></a-asset-item>
       </a-assets>
       <a-light type="point" light="color: #fff; intensity:0.6" position="3 10 1"></a-light>
       <a-light type="point" light="color: #fff; intensity:0.2" position="-3 -10 0"></a-light>
