add Web App Manifest and favicons

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>A-Painter</title>
+    <link rel="manifest" href="manifest.webmanifest">
+    <link rel="icon" href="img/icon-256.png">
     <meta name="description" content="Paint in VR in your browser. Powered by A-Frame.">
     <script>
       UPLOADCARE_LOCALE = 'en';
