--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     </script>
     <script src="https://ucarecdn.com/widget/2.5.5/uploadcare/uploadcare.full.min.js"></script>
     <script src="https://cdn.rawgit.com/zenorocha/clipboard.js/v1.5.12/dist/clipboard.min.js"></script>
+    <script src="vendor/aframe-master.min.js"></script>
     <script src="build.js"></script>
     <script src="vendor/aframe-teleport-component.min.js"></script>
     <link rel="stylesheet" href="css/main.css">
