Fixed trackpad teleport on vive

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 brush
                 if-no-vr-headset="visible: false"
                 paint-controls="hand: left"
-                teleport-controls="button: bbutton; ground: #ground; hitCylinderColor: #ff3468; curveHitColor: #ff3468; curveMissColor: #333333; curveLineWidth: 0.01; hitEntity: #hitEntityLeft"
+                teleport-controls="button: trackpad; ground: #ground; hitCylinderColor: #ff3468; curveHitColor: #ff3468; curveMissColor: #333333; curveLineWidth: 0.01; hitEntity: #hitEntityLeft"
                 ui>
                   <a-entity class="vive-tooltips" visible="false">
                     <a-entity tooltip="text: Brush size\n(slide up/down); width: 0.1; height: 0.04; targetPosition: 0 0.016 0.0073; src: assets/images/tooltip.png"
@@ -90,7 +90,7 @@
                 brush
                 if-no-vr-headset="visible: false"
                 paint-controls="hand: right"
-                teleport-controls="button: bbutton; ground: #ground; hitCylinderColor: #ff3468; curveHitColor: #ff3468; curveMissColor: #333333; curveLineWidth: 0.01; hitEntity: #hitEntityRight"
+                teleport-controls="button: trackpad; ground: #ground; hitCylinderColor: #ff3468; curveHitColor: #ff3468; curveMissColor: #333333; curveLineWidth: 0.01; hitEntity: #hitEntityRight"
                 ui>
                   <a-entity class="vive-tooltips" visible="false">
                     <a-entity tooltip="text: Brush size\n(slide up/down); width: 0.1; height: 0.04; targetPosition: 0 0.016 0.0073; src: assets/images/tooltip.png"
