--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                   </a-entity>
       </a-entity>
       <a-entity id="sky" geometry="primitive:sphere; radius:30; phiLength:360; phiStart:0; thetaLength:90" material="shader:flat; side:back; height:2048; src:#skymap; width:2048"></a-entity>
-      <a-entity id="acamera" camera look-controls-alt orbit-controls></a-entity>
+      <a-entity id="acamera" camera look-controls orbit-controls></a-entity>
     </a-scene>
     <a href="https://aframe.io/a-painter/"><div id="apainter-logo" class="hidden"></div><div id="apainter-author" style="display:none" class="hidden">authorname</div></a>
     <div id="apainter-ui">
